fix: codes smells and fix no layout de login